<resources>
    <string name="app_name">Tinsta</string>
    <!-- Server -->
    <string name="server_address_main">https://tinsta.in/</string>
    <string name="server_address">https://tinsta.in/app/</string>
    <string name="server_login">login.php</string>
    <string name="server_home">home.php</string>
    <!-- Login Activity -->
    <string name="logo">Logo</string>
    <string name="sign_in">Sign In</string>
    <string name="username">USERNAME</string>
    <string name="password">PASSWORD</string>
    <string name="s_i_g_n_i_n">S I G N I N</string>
    <string name="google">Google</string>
    <string name="facebook">Facebook</string>
    <string name="new_user">New user?</string>
    <string name="sign_up">Sign Up</string>
    <!-- Signup Activity -->
    <string name="email">Email</string>
    <string name="reference_code">Reference Code (Optional)</string>
    <string name="gender">Gender</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="s_i_g_n_u_p">S I G N U P</string>
    <string name="already_have_acc">Already have an account?</string>
    <string name="signup_complete">Please check your email to activate your account</string>
    <!-- Main Activity -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <!-- General -->
    <string name="loading">Loading</string>
    <string name="loading_des">Wait while loading…</string>
    <!-- Error Message -->
    <string name="empty_username">Username can\'t be empty!</string>
    <string name="empty_password">Password can\'t be empty!</string>
    <string name="no_internet_connection">Oops! No Internet Connection</string>
    <string name="something_wrong">Something went wrong!</string>
    <string name="wrong_username_password">Either username or password incorrect</string>
    <string name="required">Please fill all required fields</string>
    <string name="valid_email">Please enter a valid email</string>
    <string name="valid_username">Please enter a valid username</string>
    <string name="exists_username">Username already exists</string>
    <string name="exists_email">Email already exists</string>
    <string name="invalid_reference">Invalid reference code</string>
    <!-- Facebook Key -->
    <string name="facebook_app_id">550428078728360</string>
    <string name="fb_login_protocol_scheme">fb550428078728360</string>
    <string name="description_post_image">Post Image</string>
    <string name="description_comment_icon">Comment Icon</string>
    <string name="description_like_icon">Like Icon</string>
    <string name="upload_image">Upload Image</string>
    <string name="upload_video">Upload Video</string>
    <string name="embed_video">Embed Video</string>
</resources>
