<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_10">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <View
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:background="@color/colorPrimary" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:orientation="vertical"
            android:padding="@dimen/spacing_mlarge">

            <ImageView
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/spacing_large"
                android:layout_marginBottom="@dimen/spacing_mlarge"
                android:contentDescription="@string/logo"
                android:src="@mipmap/logo" />

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/spacing_middle"
                android:visibility="visible"
                app:cardCornerRadius="6dp"
                app:cardElevation="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/spacing_mlarge">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="@dimen/spacing_middle"
                        android:layout_marginBottom="@dimen/spacing_xlarge"
                        android:text="@string/sign_up"
                        android:textAllCaps="true"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                        android:textColor="@color/green_500"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/username"
                        android:textAlignment="center"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
                        android:textColor="@color/grey_40" />

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/signup_et_username"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="-4dp"
                        android:layout_marginRight="-4dp"
                        android:inputType="text"
                        android:maxLength="50"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                        android:textColor="@color/blue_600"
                        android:textStyle="bold"
                        android:theme="@style/EditText.Grey" />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="@dimen/spacing_mlarge" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/email"
                        android:textAlignment="center"
                        android:textAllCaps="true"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
                        android:textColor="@color/grey_40" />

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/signup_et_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="-4dp"
                        android:layout_marginRight="-4dp"
                        android:inputType="textEmailAddress"
                        android:maxLength="50"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                        android:textColor="@color/blue_600"
                        android:textStyle="bold"
                        android:theme="@style/EditText.Grey" />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="@dimen/spacing_mlarge" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/password"
                        android:textAlignment="center"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
                        android:textColor="@color/grey_40" />

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/signup_et_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="-4dp"
                        android:layout_marginRight="-4dp"
                        android:inputType="textPassword"
                        android:maxLength="50"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                        android:textColor="@color/blue_600"
                        android:textStyle="bold"
                        android:theme="@style/EditText.Grey" />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="@dimen/spacing_mlarge" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/reference_code"
                        android:textAlignment="center"
                        android:textAllCaps="true"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
                        android:textColor="@color/grey_40" />

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/signup_et_reference"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="-4dp"
                        android:layout_marginRight="-4dp"
                        android:inputType="textEmailAddress"
                        android:maxLength="50"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                        android:textColor="@color/blue_600"
                        android:textStyle="bold"
                        android:theme="@style/EditText.Grey" />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="@dimen/spacing_mlarge" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/gender"
                        android:textAlignment="center"
                        android:textAllCaps="true"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
                        android:textColor="@color/grey_40" />

                    <RadioGroup
                        android:id="@+id/signup_gender"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="-4dp"
                        android:layout_marginRight="-4dp"
                        android:orientation="horizontal">

                        <android.support.v7.widget.AppCompatRadioButton
                            android:id="@+id/signup_radio_male"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/male"
                            android:checked="true"
                            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                            android:textColor="@color/grey_90" />

                        <View
                            android:layout_width="@dimen/spacing_mlarge"
                            android:layout_height="0dp" />

                        <android.support.v7.widget.AppCompatRadioButton
                            android:id="@+id/signup_radio_female"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/female"
                            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                            android:textColor="@color/grey_90" />
                    </RadioGroup>

                    <View
                        android:layout_width="0dp"
                        android:layout_height="@dimen/spacing_mlarge" />

                    <Button
                        android:id="@+id/signup_bt_login"
                        android:layout_width="match_parent"
                        android:layout_height="55dp"
                        android:layout_marginLeft="-4dp"
                        android:layout_marginRight="-4dp"
                        android:background="@drawable/btn_rounded_primary"
                        android:text="@string/s_i_g_n_u_p"
                        android:textAllCaps="false"
                        android:textColor="@android:color/white"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/spacing_large"
                        android:layout_marginBottom="@dimen/spacing_medium"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="3dp"
                            android:text="@string/already_have_acc"
                            android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
                            android:textColor="@color/blue_grey_300" />

                        <TextView
                            android:id="@+id/signup_login"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:clickable="true"
                            android:focusable="true"
                            android:text="@string/sign_in"
                            android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
                            android:textColor="@color/colorPrimaryLight"
                            android:textStyle="bold" />
                    </LinearLayout>
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <View
                android:layout_width="0dp"
                android:layout_height="@dimen/spacing_large" />
        </LinearLayout>
    </RelativeLayout>
</ScrollView>